##  Copyright © 1996, 1997  Ossama Othman
##
##  All Rights Reserved
##
##               WARNING
##
##  THIS SOFTWARE AND MANUAL ARE BOTH
##  PROTECTED BY U.S. COPYRIGHT LAW
##  (TITLE  17 UNITED STATES CODE).
##  UNAUTHORIZED REPRODUCTION AND/OR
##  SALE MAY RESULT IN IMPRISONMENT OF
##  UP TO ONE YEAR AND FINES OF UP TO
##  $100,000 (17 USC 506). COPYRIGHT
##  INFRINGERS MAY ALSO BE SUBJECT TO
##  CIVIL LIABILITY.

##  $Id: Makefile.am,v 1.3 2004/11/08 21:45:44 othman Exp $


##
##  Process this file with automake to produce Makefile.in
##

exampledir = $(prefix)/share/doc/$(PACKAGE)/examples
dist_example_DATA = dot.marc 101.inp mumu0.test.inp
